# in-context-individuation

./: .gitignore  main.py  pyproject.toml
data/eval/: 041826_labeled_eval_gap.csv  041826_unlabeled_eval_gap.csv  041926_excerpts.csv  eval_1.csv  excerpts.csv
data/transcripts/: 1_dario_joling.txt  2_two_michaels.txt  3_two_michaels_corrupted.txt  4_two_michaels_caps.txt  5_two_michaels_capitalized_corrupted.txt
scripts/: 0_same_names.ipynb  2_gap_eval.ipynb  3_stylized_speech.ipynb  evals.ipynb  gap.ipynb  michael.ipynb
utils/: __init__.py  style.py  utils.py
