[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "in-context-individuation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "convokit>=4.1.0",
    "ipython>=9.12.0",
    "ipywidgets>=8.1.8",
    "janitor>=0.1.1",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "nnsight>=0.6.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyjanitor>=0.32.23",
    "rpy2>=3.6.7",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.setuptools]
packages = ["utils"]
